k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-web
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: portfolio-html-config
